Fix: semaforo de holgura, conteo de unidades activas, pendientes parciales y codigos de error del servicio